--- a/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_EMAIL_EITE_HTML.html
+++ b/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_EMAIL_EITE_HTML.html
@@ -6,11 +6,11 @@
 <div class="main_full_top"></div>
 <div class="main_full">
   <div class="main_full_line">
-    <div class="main_full_full_right"><a href="%bind(:4)" class="blue"><img src="%bind(:1)/statics/images/website/arrow.png" width="8" height="7" />返回</a></div>
+    <div class="main_full_full_right"><a href="%bind(:4)" class="blue"><img src="%bind(:2)/arrow.png" width="8" height="7" />返回</a></div>
   </div>
 <div class="main_full_line_auto2">
   <p>&nbsp;</p>
-  <p><img src="%bind(:2)" width="46" height="38" /></p>
+  <p><img src="%bind(:2)/right_green.png" width="46" height="38" /></p>
   <p>&nbsp;</p>
   <p>%bind(:3)，<a id="emailAdderss" href="%bind(:4)" class="blue"><span id="email_Adderss">点击登录</span></a>。</p>
   <p>&nbsp;</p>
