--- a/src/main/resources/html/TZOnTrialBundle/TZ_ON_TRIAL_HTML.html
+++ b/src/main/resources/html/TZOnTrialBundle/TZ_ON_TRIAL_HTML.html
@@ -88,6 +88,21 @@
 		<div class="search_icodiv">
 			<div class="main_full_line">
 				<div class="main_full_line_left">
+					<span class="reg_title_star"></span>座机:
+				</div>
+				<div class="main_full_line_right">
+			      	<input name="TZ_CONTACT_TEL" type="text" class="input_351px" id="TZ_CONTACT_TEL"  value=""/>
+			      	<span id="TZ_CONTACT_TELStyle" class="alert_display_none">
+						<img src="%bind(:1)/statics/css/website/images/alert.png" width="16" height="16" class="alert_img"/>
+				  		<label id="TZ_CONTACT_TEL_status"></label>
+					</span>
+			    </div>
+			</div>
+		</div>
+		
+		<div class="search_icodiv">
+			<div class="main_full_line">
+				<div class="main_full_line_left">
 					<span class="reg_title_star">*</span>Email:
 				</div>
 				<div class="main_full_line_right">
@@ -105,7 +120,7 @@
 		<div class="search_icodiv">
 			<div class="main_full_line">
 				<div class="main_full_line_left">
-					<span class="reg_title_star"></span>机构网站:
+					<span class="reg_title_star"></span>网址:
 				</div>
 				<div class="main_full_line_right">
 			      	<input name="TZ_ORG_WEBSITE" type="text" class="input_351px" id="TZ_ORG_WEBSITE"  value=""/>
