唐敏敏 20160331 注册页面修改

--- a/src/main/resources/html/TZSitePageBundle/TzSetRegisterPage.html
+++ b/src/main/resources/html/TZSitePageBundle/TzSetRegisterPage.html
@@ -35,7 +35,7 @@
 </script>
 </head>
 
-<body style="background: #fff">
+<body style="background: #fff" onkeydown="BindEnter(event)">
 	<div id="all">
 		<div id="sdkbar">
 			<div class="clear">
