--- a/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_REG_HTML.html
+++ b/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_REG_HTML.html
@@ -35,13 +35,13 @@
 
 
 
-			<div class="main_full_line" style="display:none" id="button_yzfs">
+			<div class="main_full_line" id="button_yzfs" %bind(:8)>
 				<div class="main_full_line_right">
 	    			<input id="send_Verification" type="button" value="发送手机验证码" class="button_351px" onclick="send_yzm()"/>
 				</div>
 	  		</div>
 	  		<div class="main_full_lines"></div>
-			<div class="main_full_line" id="yzfsMobile" style="display:none">
+			<div class="main_full_line" id="yzfsMobile" %bind(:8)>
 				<div class="main_full_line_left">
 					<span class="reg_title_star">*</span>验证码:
 				</div>
@@ -55,7 +55,7 @@
 					</span>
 			     </div>
 			</div>
-			<div class="main_full_line" id="yzfsEmail">
+			<div class="main_full_line" id="yzfsEmail" %bind(:7)>
 				<div class="main_full_line_left">
 					<span class="reg_title_star">*</span>验证码:
 				</div>
