--- a/src/main/resources/html/TZWebSiteRegisteBundle/TZ_SETREGISTEPAGE_HTML.html
+++ b/src/main/resources/html/TZWebSiteRegisteBundle/TZ_SETREGISTEPAGE_HTML.html
@@ -28,7 +28,7 @@
         </script>
 </head>
 
-<body style="background:#fff">
+<body style="background:#fff" onkeydown="BindEnter(event)">
 		<div id="all">
 <div id="sdkbar">
             <div class="clear">
