--- a/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_PHO_HTML.html
+++ b/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_PHO_HTML.html
@@ -192,7 +192,8 @@
 				                    },
 						            error:function(xhr){
 						                btn.html(xhr.responseText);
-										layer.close(layer.index);
+						                $("#loading").fadeOut();
+										//layer.close(layer.index);
 						            }
 				                })
 				            },
