--- a/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_WDZH_MOBILE.html
+++ b/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_WDZH_MOBILE.html
@@ -1,4 +1,5 @@
-<link href="%bind(:1)/statics/css/website/css.css" rel="stylesheet" type="text/css" />
+<!-- <link href="%bind(:1)/statics/css/website/css.css" rel="stylesheet" type="text/css" /> -->
+<link rel="stylesheet" type="text/css" href="page_stylecss" />
 <script type="text/javascript" src="%bind(:1)/statics/js/lib/jquery/jquery.min.js"></script>
 
 <div class="city_top">
