--- a/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_COMBOX_HTML.html
+++ b/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_COMBOX_HTML.html
@@ -1,5 +1,5 @@
 <div class="main_inner_right_line_50px">
-	<div class="main_inner_right_line_left_user">%bind(:1):</div>
+	<div class="main_inner_right_line_left_user">%bind(:1)：</div>
 	<select name="%bind(:2)" id="%bind(:2)" class="combox">
 		%bind(:3)
 	</select>
