--- a/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_WJMM_EP_HTML.html
+++ b/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_WJMM_EP_HTML.html
@@ -207,7 +207,7 @@
 			$("#sendyzm").css("opacity","0.8");
 			$("#sendyzm").removeAttr("disabled");
 			$("#Mobile_User").removeAttr("readOnly");
-			$("#sendyzm").css("color","#fff");			
+			$("#sendyzm").css("color","");			
 			$("#sendyzm").val("发送验证码");
 			$("#sendyzm").css("background-image","");
 			wait =60;
