--- a/src/main/resources/html/TZApplicationTemplateBundle/TZ_ONLINE_VIEW_HTML.html
+++ b/src/main/resources/html/TZApplicationTemplateBundle/TZ_ONLINE_VIEW_HTML.html
@@ -43,7 +43,10 @@
 		<script type="text/javascript" src="%bind(:1)/statics/js/tranzvision/appwidget/ValidationRules.js"></script>
 		<script type="text/javascript" src="%bind(:1)/statics/js/lib/formvalidator/formValidator.js"></script>
 		<script src="%bind(:1)/statics/js/lib/jquery/chosen.jquery.js" type="text/javascript"></script>
-
+		<style>
+			.main_inner_connent_info_left{width: %bind(:19)}
+			.main_inner_content_info_right{width: %bind(:20)}
+		</style>
 		<script type="text/javascript">
 			MsgSet = %bind(:10);
 
