报名表样式

--- a/src/main/resources/html/TZWebsiteApplicationBundle/TZ_ONLINE_PAGE_HTML.html
+++ b/src/main/resources/html/TZWebsiteApplicationBundle/TZ_ONLINE_PAGE_HTML.html
@@ -46,6 +46,10 @@
 		<script type="text/javascript" src="%bind(:32)/statics/js/tranzvision/appwidget/ValidationRules.js"></script>
 		<script type="text/javascript" src="%bind(:32)/statics/js/lib/formvalidator/formValidator.js"></script>
 		<script type="text/javascript" src="%bind(:32)/statics/js/lib/jquery/chosen.jquery.js" ></script>
+		<style>
+			.main_inner_connent_info_left{%bind(:33)}
+			.main_inner_content_info_right{%bind(:34)}
+		</style>
 
 		<script type="text/javascript">
 			
