--- a/src/main/resources/html/TZWebSiteRegisteBundle/TZ_DONE_SUCCESS_ENG_HTML.html
+++ b/src/main/resources/html/TZWebSiteRegisteBundle/TZ_DONE_SUCCESS_ENG_HTML.html
@@ -18,7 +18,7 @@
   </div>
 <div class="main_full_line_auto2">
   <p>&nbsp;</p>
-  <p><img src="%bind(:1)/right_green.png" width="46" height="38" /></p>
+  <p><img src="%bind(:2)" /></p>
   <p>&nbsp;</p>
   <p>%bind(:1)</p>
   <p>&nbsp;</p>
