--- a/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_WDZH_EN_EMAIL.html
+++ b/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_WDZH_EN_EMAIL.html
@@ -106,8 +106,8 @@
 			<label id="userEmail_status"></label></span>
 		</div>
 	</div>
-	<div class="center_bt2" style="margin-top:40px" onclick="emailsubmit()">
-	    <div id="sendemail" class="bt_blue">Send Mail</div> 
+	<div class="center_bt2" style="margin-top:40px">
+	    <div id="sendemail" class="bt_blue" onclick="emailsubmit()">Send Mail</div> 
 	</div>
 	<div class="padding_div_40px"></div>
 <input name="strJgid" id="strJgid" type="hidden" value="%bind(:2)"/>
