--- a/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_WDZH_MOBILE.html
+++ b/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_WDZH_MOBILE.html
@@ -9,25 +9,25 @@
 	<div class="padding_div_40px"></div>
 	<div class="main_inner_right_line_50px">
     	<div class="main_inner_right_line_left5"> 手 机 号：</div>
-        <div class="main_inner_right_line_mid3">
-        	<input id="newstel" name="newstel" type="text" class="input_251px" value="%bind(:4)"/>
+        <div class="main_inner_right_line_mid3" style="width:200px">
+        	<input id="newstel" name="newstel" type="text" class="input_251px" style ="width:201px" value="%bind(:4)"/>
         </div>
         <div class="main_inner_right_line_right2">
-          	<input id="gainyzm" type="button" value="发送验证码" onclick="gainyzm()"/>
+          	<input id="gainyzm" type="button" value="发送验证码" style="width:170px;margin-left:10px;" onclick="gainyzm()"/>
         </div>
   	</div>
   	<div class="main_inner_right_line_50px">
     	<div class="main_inner_right_line_left5"> 验 证 码：</div>
-    	<div class="main_inner_right_line_mid4">
-      		<input id="newsyzm" name="newsyzm" type="text" class="input_152px"/>
+    	<div class="main_inner_right_line_mid4" style="width:200px">
+      		<input id="newsyzm" name="newsyzm" type="text" class="input_152px" style ="width:201px" />
 		
     	</div>
-		<span id="yzmtext" style="margin-left:-20px;font-size:14px;color:#FF0000"></span>
+		<span id="yzmtext" style="margin-left:10px;font-size:14px;color:#FF0000"></span>
   	</div>
   	<div class="main_inner_right_line_50px">
     	<div class="main_inner_right_line_left5"></div>
     	<div class="main_inner_right_line_mid4">
-      		<div id="ymobile" class="bt_blue" style="width:152px;">确认修改</div>
+      		<div id="ymobile" class="bt_blue" style="width:200px;margin-top:10px;">确认修改</div>
     	</div>
   	</div>
     <input id="strJgid" name="strJgid" type="hidden" value="%bind(:5)"/>
