--- a/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_WDZH_MOBILE_ENG.html
+++ b/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_WDZH_MOBILE_ENG.html
@@ -9,25 +9,24 @@
 	<div class="padding_div_40px"></div>
 	<div class="main_inner_right_line_50px">
     	<div class="main_inner_right_line_left5"> Phone：</div>
-        <div class="main_inner_right_line_mid3" style="width:230px">
-        	<input id="newstel" name="newstel" type="text" class="input_251px" style ="width:231px" value="%bind(:4)"/>
+        <div class="main_inner_right_line_mid3" style="width:200px">
+        	<input id="newstel" name="newstel" type="text" class="input_251px" style ="width:201px" value="%bind(:4)"/>
         </div>
-        <div class="main_inner_right_line_right2" style="width:200px">
-          	<input id="gainyzm" type="button" value="Send Security Code" onclick="gainyzm()"/>
+        <div class="main_inner_right_line_right2">
+          	<input id="gainyzm" type="button" value="Send Security Code" style="width:170px;margin-left:10px;" onclick="gainyzm()"/>
         </div>
   	</div>
   	<div class="main_inner_right_line_50px">
     	<div class="main_inner_right_line_left5"> Security Code：</div>
-    	<div class="main_inner_right_line_mid4">
-      		<input id="newsyzm" name="newsyzm" type="text" class="input_152px"/>
-		
+    	<div class="main_inner_right_line_mid4" style="width:200px">
+      		<input id="newsyzm" name="newsyzm" type="text" class="input_152px" style ="width:201px" />
     	</div>
-		<span id="yzmtext" style="margin-left:-20px;font-size:14px;color:#FF0000"></span>
+		<span id="yzmtext" style="margin-left:10px;font-size:14px;color:#FF0000"></span>
   	</div>
   	<div class="main_inner_right_line_50px">
     	<div class="main_inner_right_line_left5"></div>
     	<div class="main_inner_right_line_mid4">
-      		<div id="ymobile" class="bt_blue" style="width:152px;">Confirm</div>
+      		<div id="ymobile" class="bt_blue" style="width:200px;margin-top:10px;">Confirm</div>
     	</div>
   	</div>
     <input id="strJgid" name="strJgid" type="hidden" value="%bind(:5)"/>
@@ -112,7 +111,7 @@
 			$("#gainyzm").prop("disabled","true");
 			$("#gainyzm").css("opacity","1");
 			$("#gainyzm").css("color","#A9A9A9");
-			$("#gainyzm").val("Resend Security Code("+wait+")");
+			$("#gainyzm").val("Resend ("+wait+")");
 			$("#newstel").prop("readOnly","true");
 			$("#gainyzm").css("background-image","url(%bind(:1)/statics/images/tranzvision/gray_bg_bt.png)");
 			if(wait>=0){
