--- a/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_WDZH_EMAIL.html
+++ b/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_WDZH_EMAIL.html
@@ -20,7 +20,7 @@
 	<div class="main_inner_right_line_50px">
 	    <div class="main_inner_right_line_left5">新 邮 箱：</div>
 	    <div class="main_inner_right_line_mid_user">
-	        <input name="newsemail" id="newsemail" type="text" class="input_251px" id="newsemail" value=""/>
+	        <input name="newsemail" id="newsemail" type="text" class="input_251px" id="newsemail" value="%bind(:5)"/>
 	    </div>
 	    <div class="main_inner_right_line_right2"></div>
 	</div>
