--- a/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_WDZH_EN_EMAIL.html
+++ b/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_WDZH_EN_EMAIL.html
@@ -99,7 +99,7 @@
 	<div class="main_inner_right_line_50px">
 	    <div class="main_inner_right_line_left5">New Email Address：</div>
 	    <div class="main_inner_right_line_mid_user">
-	        <input name="newsemail" id="newsemail" type="text" class="input_251px" id="newsemail" value="" onblur="check_email(this.value)"/>
+	        <input name="newsemail" id="newsemail" type="text" class="input_251px" id="newsemail" value="%bind(:5)" onblur="check_email(this.value)"/>
 	    </div>
 	    <div style="text-align:center">
 			<span id="userEmailStyle" class="alert_display_none"><img src="%bind(:4)/alert.png" width="16" height="16" class="alert_img"  />
