--- a/src/main/resources/html/TZSitePageBundle/SiteIndexSaveTpl.html
+++ b/src/main/resources/html/TZSitePageBundle/SiteIndexSaveTpl.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 <meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="renderer" content="webkit">
 <title></title>
 <link rel="stylesheet" type="text/css" href="page_stylecss" />
 <link rel="stylesheet" type="text/css" href="{ContextPath}/statics/css/website/decoratedplugin.css" id="decoratedplugincss" />
