--- a/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_PHO_HTML.html
+++ b/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_PHO_HTML.html
@@ -378,7 +378,7 @@
 					%bind(:17)
 				</div>
 				<div class="photo_preview" id="photo_pre">
-					<img id="preview" src="%bind(:21)/33.jpg" />
+					<img id="preview" width="126px;" src="%bind(:22)" />
 				</div>
 				<div class="photo_bt" id="save">
 					<div class="photosavbt">%bind(:19)</div>
