--- a/src/main/resources/html/TZApplicationTemplateBundle/TZ_FORM_EXPORT_FOOTER.html
+++ b/src/main/resources/html/TZApplicationTemplateBundle/TZ_FORM_EXPORT_FOOTER.html
@@ -18,6 +18,10 @@
 			}
 		}
 	</script>
+	<style type="text/css">
+		body{font-size:12px;}
+		p{display:inline;}
+	</style>
 </head>
 <body style="border: 0; margin: 0;" onload="subst()">
 	<table style="border-bottom: 1px solid black; width: 100%">
