--- a/src/main/resources/html/TZApplicationTemplateBundle/TZ_APP_FORM_EXPORT_HTML.html
+++ b/src/main/resources/html/TZApplicationTemplateBundle/TZ_APP_FORM_EXPORT_HTML.html
@@ -10,9 +10,8 @@
 <body>
 	<div class="container">
 		<div class="top">
-			<h1 align="center">
-				<strong>%bind(:2)</strong>
-			</h1>
+			<h1 align="center"><strong>%bind(:2)</strong></h1>
+			<h2 align="center" style="font-size: 16px;line-height: 22px;">报名表编号NO.%bind(:4)</h2>
 		</div>
 
 		<div class="maincon">
