--- a/src/main/resources/html/TZOnTrialBundle/TZ_ON_TRIAL_M_HTML.html
+++ b/src/main/resources/html/TZOnTrialBundle/TZ_ON_TRIAL_M_HTML.html
@@ -18,7 +18,7 @@
 
 <body>
 <div class="login-bg">
-    <div class="login-logo"><img src="%bind(:1)/statics/css/website/images/m-logo.png" /></div>
+    <div class="login-logo"><img style='margin-left: 10px;width:95%' src="%bind(:1)/statics/css/website/images/m-logo.png" /></div>
     
     <form id="login_form">
     <div class="login-con">
@@ -71,7 +71,7 @@
             </div>
         </div>
         <div class="login-font-center">
-        		请认真填写以上信息，审核通过后，我们将有专人与您取得联系并提供后续服务
+        		<font size='2'>请认真填写以上信息，审核通过后，我们将有专人与您取得联系并提供后续服务</font>
         	</div>
         <div class="login-btn">提交</div>
     </div>
