--- a/src/main/resources/html/TZOnTrialBundle/TZ_TRIAL_M_SUCCESS_HTML.html
+++ b/src/main/resources/html/TZOnTrialBundle/TZ_TRIAL_M_SUCCESS_HTML.html
@@ -11,9 +11,10 @@
 
 <body>
 <div class="login-bg">
-    <div class="login-logo"><img src="%bind(:1)/statics/css/website/images/m-logo.png" /></div>
-    <div style="text-align: center;  margin-top: 200px;" >
-		  <p style="color:#fff;">%bind(:2)</p>
+    <div class="login-logo"><img style='margin-left: 10px;width:95%' src="%bind(:1)/statics/css/website/images/m-logo.png" /></div>
+    <div style="vertical-align:middle;  text-align: center; margin-top:160px; " >
+    	  <p><img style="width:128px;" src="%bind(:1)/statics/css/website/images/submit_success.png"></p>
+		  <p style="color:#fa7f00;"><font size="5"><b>%bind(:2)</b></font></p>
 
     </div>
 </div>
