--- a/src/main/resources/html/TZOnTrialBundle/TZ_TRIAL_M_SUCCESS_HTML.html
+++ b/src/main/resources/html/TZOnTrialBundle/TZ_TRIAL_M_SUCCESS_HTML.html
@@ -12,11 +12,15 @@
 <body>
 <div class="login-bg">
     <div class="login-logo"><img style='margin-left: 10px;width:95%' src="%bind(:1)/statics/css/website/images/m-logo.png" /></div>
-    <div style="vertical-align:middle;  text-align: center; margin-top:160px; " >
-    	  <p><img style="width:128px;" src="%bind(:1)/statics/css/website/images/submit_success.png"></p>
-		  <p style="color:#fa7f00;"><font size="5"><b>%bind(:2)</b></font></p>
-
+    <!--  <div style="vertical-align:middle;  text-align: center; margin-top:160px; " >-->
+    <div style=" width:80%; height:160px; text-align: center; position:absolute; top:50%;  margin-left:10%; margin-top:-80px; background:#fff;  opacity:0.5;  filter: Alpha(Opacity=50);border-radius:5px;  -moz-border-radius: 5px; -webkit-border-radius: 5px;">
+    	  
     </div>
+    <div style=" width:80%; height:160px; text-align: center; position:absolute; top:50%;  margin-left:10%; margin-top:-80px; ">
+    	 <p><img style="width:80px;margin-top:20px;" src="%bind(:1)/statics/css/website/images/submit_success.png"></p>
+		  <p style="color:#fa7f00;"><font size="4"><b>%bind(:2)</b></font></p> 
+    </div>
+    
 </div>
 
 </body>
