试用申请修改 增加来源字段  20160531 唐敏敏

--- a/src/main/resources/html/TZOnTrialBundle/TZ_ON_TRIAL_HTML.html
+++ b/src/main/resources/html/TZOnTrialBundle/TZ_ON_TRIAL_HTML.html
@@ -145,6 +145,7 @@
 				</span>
 			    </div>
 		</div>
+		<input type="hidden" id="hmsr" name="hmsr" value="%bind(:2)" />
 		<div class="main_full_line">请尽可能地填写准确完整的机构电话、机构邮箱及机构网址</div>
 	  	<div class="main_full_line">
 				<div class="bt_register" id="submitbutton"><span style="color:#FFFFFF">提交</span></div>
