--- a/src/main/resources/html/TZOnTrialBundle/TZ_ON_TRIAL_M_HTML.html
+++ b/src/main/resources/html/TZOnTrialBundle/TZ_ON_TRIAL_M_HTML.html
@@ -70,6 +70,7 @@
                 <input placeholder="网址" id="TZ_ORG_WEBSITE" name="TZ_ORG_WEBSITE" class="text-box right" type="text" /> 
             </div>
         </div>
+        <input type="hidden" id="hmsr" name="hmsr" value="%bind(:2)" />
         <div class="login-font-center">
         		<font size='2'>请认真填写以上信息，审核通过后，我们将有专人与您取得联系并提供后续服务</font>
         	</div>
