--- a/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_REG_EN_HTML.html
+++ b/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_REG_EN_HTML.html
@@ -5,6 +5,10 @@
 <script type="text/javascript" src="%bind(:5)/statics/js/lib/laydate/laydate.js"></script>
 <script type="text/javascript">
 	var strJgid = "%bind(:2)";
+	
+	jQuery(function(){ 
+		%bind(:9)
+	});  
 </script>
 
 <div id="main">
