--- a/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_REG_HTML.html
+++ b/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_REG_HTML.html
@@ -5,6 +5,7 @@
 <script type="text/javascript" src="%bind(:5)/statics/js/lib/laydate/laydate.js"></script>
 <script type="text/javascript">
 	var strJgid = "%bind(:2)";
+	var strSiteId = "%bind(:10)";
 	
 	jQuery(function(){ 
 		%bind(:9)
