--- a/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_WJMM_EP2_HTML.html
+++ b/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_WJMM_EP2_HTML.html
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE8/9" >
 <title></title>
 <link href="page_stylecss" rel="stylesheet" type="text/css" />
-<script type="text/javascript" src="%bind(:3)/statics/js/lib/jquery/jquery.min.js"></script>
+<script type="text/javascript" src="%bind(:4)/statics/js/lib/jquery/jquery.min.js"></script>
 <script type="text/javascript">
 	function setTab(m,n){
 		var menu=document.getElementById("tab" + m).getElementsByTagName("li");  
@@ -14,10 +14,10 @@
 		{
 		   menu[i].className=i==n?"now":""; 
 		   showdiv[i].style.display=i==n?"block":"none"; 
-		} 
+		}
 	}
-
-	function check_email(val){ 
+ 
+	function check_email(val){
 	var flag=false;
 		if(val!=''){
 			var patrn = /^\w+([-+.]\w+)*@\w+([-.]\w+)*\.\w+([-.]\w+)*$/;
@@ -25,19 +25,22 @@
 			   $('#userEmail_status').html("<span>请输入正确的邮件地址</span>");
 			   $('#userEmailStyle').removeClass("alert_display_none");
 			}else{
+	var tzParams = '{"ComID":"TZ_SITE_UTIL_COM","PageID":"TZ_SITE_MAIL_STD","OperateType":"QF","comParams":{"email":"'+val+'","orgid":"'+$("#orgid").val()+'","lang":"%bind(:3)","sen":"5"}}';
 				$.ajax({
 					type: "get",
 					async :false,
-					data:{Email:val},
+					data:{
+						tzParams:tzParams
+							},
 					url:"%bind(:1)",
 					dataType: "json",
 					success: function(result){
-						if(result.resultFlg =="success"){
+						if(result.comContent =="success"){
 							$('#userEmail_status').html("");
 							$('#userEmailStyle').addClass("alert_display_none");
 							flag=true;
 						}else{
-							$('#userEmail_status').html("<span>"+result.errorDescr+"</span>");
+							$('#userEmail_status').html("<span>"+result.state.errdesc+"</span>");
 							$('#userEmailStyle').removeClass("alert_display_none");
 							flag=false;
 						}
@@ -59,19 +62,20 @@
 			   $('#userMobile_status').html("<span>请输入正确的手机号</span>");
 			   $('#mobileStyle').removeClass("alert_display_none");
 			}else{
+				var tzParams = '{"ComID":"TZ_SITE_UTIL_COM","PageID":"TZ_SITE_SMS_STD","OperateType":"QF","comParams":{"phone":"'+val+'","orgid":"'+$("#orgid").val()+'","lang":"%bind(:3)","sen":"6"}}';
 				$.ajax({
 					type: "get",
 					async :false,
-					data:{Moblie:val},
+					data:{tzParams:tzParams},
 					url:"%bind(:1)",
 					dataType: "json",
 					success: function(result){
-						if(result.resultFlg =="success"){
+						if(result.comContent =="success"){
 							$('#userMobile_status').html("");
 							$('#mobileStyle').addClass("alert_display_none");
 							flag=true;
 						}else{
-							$('#userMobile_status').html("<span>"+result.errorDescr+"</span>");
+							$('#userMobile_status').html("<span>"+result.state.errdesc+"</span>");
 							$('#mobileStyle').removeClass("alert_display_none");
 							flag=false;
 						}
@@ -86,26 +90,30 @@
 	}
 
 	function send_email(){
-		var email=$("#Email_User").val();
-		if(check_email(email)){
-			if(email==""){alert("请输入邮箱！");}
-			else{
-				$.ajax({
-					type:"post",
-					dataType:"html",
-					async:false,
-					data: "Email="+ email,
-					url:"%bind(:1)",
-					success:function(data){
-						if(data=="邮件已发送到您邮箱，请注意查收！"){emailtime();}
-						else if(data=="shtime"){alert("发送时间间隔太短,请等待一段时间后再试。");}
-						else{alert(data);}
-					}
-				});
+		if($("#sendemail").prop("disabled") != "true"){
+			var email=$("#Email_User").val();
+			if(check_email(email)){
+				if(email==""){alert("请输入邮箱！");}
+				else{
+		var tzParams = 	'{"ComID":"TZ_SITE_UTIL_COM","PageID":"TZ_SITE_MAIL_STD","OperateType":"QF","comParams":{"email":"'+email+'","orgid":"'+$("#orgid").val()+'","lang":"%bind(:3)",	"sen":"6"}}';
+					$.ajax({
+						type:"post",
+						dataType:"json",
+						async:false,
+						data:{
+							tzParams:tzParams
+							},
+						url:"%bind(:1)",
+						success:function(result){
+							if(result.comContent=="success"){emailtime();alert("邮件已发送到您邮箱，请注意查收！");}
+							else{alert(result.state.errdesc);}
+						}
+					});
+				}
+			}else{
+				alert("请输入正确的邮件地址");
 			}
-		}else{
-			alert("请输入正确的邮件地址");
-		};
+		}
   	};
 
 	function send_yzm(){ 
@@ -115,24 +123,24 @@
 			$("#yzm").val("");
 			$("#Mobile_User").text("");
 			if(check_mobile(tel)){
-				if(tel==""){alert("请输入手机号！");}
+				if(tel==""){alert("请输入手机号!");}
 				else{
+					var tzParams = 	'{"ComID":"TZ_SITE_UTIL_COM","PageID":"TZ_SITE_SMS_STD","OperateType":"QF","comParams":{"phone":"'+tel+'","orgid":"'+$("#orgid").val()+'","lang":"%bind(:3)","sen":"7"}}';
 					$.ajax({
 						type:"post",
-						dataType:"html",
+						dataType:"json",
 						async:false,
-						data: "Yzm="+ yzm+"&Tel="+ tel,
-						url:"%bind(:1)"+"&Tel="+tel,
-						success:function(data){
-							if(data=="验证码已发送到您手机，请注意查收！"){atime();}
-							else if(data=="shtime"){alert("发送时间间隔太短,请等待一段时间后再试。");}
-							else{alert(data);}
+						data: {tzParams:tzParams},
+						url:"%bind(:1)",
+						success:function(result){
+							if(result.comContent=="success"){atime();alert("验证码已发送到您手机，请注意查收！");}
+							else{alert(result.state.errdesc);}
 						}
 					});
 				}
 			}else{
-				alert("请输入正确的手机号");
-			};
+				alert("请输入正确的手机号！");
+			}
 		}
   	};
 
@@ -141,31 +149,25 @@
 		var tel=$("#Mobile_User").val();
 		if(yzm==""){$("#yzm_status").html("<span>请输入验证码</span>");$("#yzmStyle").removeClass("alert_display_none");}
 		else{
+			var tzParams = 	'{"ComID":"TZ_SITE_UTIL_COM","PageID":"TZ_SITE_SMS_STD","OperateType":"QF","comParams":{"phone":"'+tel+'","yzm":"'+yzm+'","siteid":"%bind(:7)","orgid":"'+$("#orgid").val()+'","lang":"%bind(:3)","sen":"3"}}';
 			$.ajax({
 				type:"post",
-				dataType:"html",
+				dataType:"json",
 				async:false,
-				data: "Yzm="+ yzm+"&Tel="+ tel,
+				data:{tzParams:tzParams},
 				url:"%bind(:1)",
-				success:function(data){	
-					if(data=="success"){
+				success:function(result){	
+					if(result.comContent=="success"){
 						clearTimeout(stop);
 						$("#yzm_status").html("");
 						$("#yzmStyle").addClass("alert_display_none");
 						btime();
-						window.location.href="%bind(:1)"+"&username="+tel;
+						window.location.href="%bind(:1)"+"?classid=smsCls&orgid="+$("#orgid").val()+"&siteid=%bind(:7)&phone="+tel+"&lang=%bind(:3)&sen=4&yzm="+yzm;
+					}else{
+						$("#yzm_status").html(result.state.errdesc);
+						$("#yzmStyle").removeClass("alert_display_none");
 					}
-					else 
-						if(data=="fail"){
-								$("#yzm_status").html("验证码错误，请重新输入");
-								$("#yzmStyle").removeClass("alert_display_none");
-						}
-						else{
-							$("#yzm_status").html("验证已超时，请重新获取验证码");
-							$("#yzmStyle").removeClass("alert_display_none");
-						}
-						
-					}
+				}
 			});
 		}
 	};
@@ -192,7 +194,7 @@
 			$("#sendemail").css("color","#A9A9A9");
 			$("#sendemail").html("("+emailwait+")秒后重新发送");
 			$("#Email_User").prop("readOnly","true");
-			$("#sendemail").css("background-image","url(%bind(:4)/gray_bg_bt.png)");
+			$("#sendemail").css("background-image","url(%bind(:5)/gray_bg_bt.png)");
 			if(emailwait>=0){
 				emailwait=emailwait-1;}
 			emailstop = setTimeout("emailtime()",1000);
@@ -205,7 +207,7 @@
 			$("#sendyzm").css("opacity","0.8");
 			$("#sendyzm").removeAttr("disabled");
 			$("#Mobile_User").removeAttr("readOnly");
-			$("#sendyzm").css("color","#fff");			
+			$("#sendyzm").css("color","");			
 			$("#sendyzm").val("发送验证码");
 			$("#sendyzm").css("background-image","");
 			wait =60;
@@ -216,7 +218,7 @@
 			$("#sendyzm").css("color","#A9A9A9");
 			$("#sendyzm").val("("+wait+")秒后重新发送");
 			$("#Mobile_User").prop("readOnly","true");
-			$("#sendyzm").css("background-image","url(%bind(:4)/gray_bg_bt.png)");
+			$("#sendyzm").css("background-image","url(%bind(:5)/gray_bg_bt.png)");
 			if(wait>=0){
 				wait=wait-1;}
 			stop = setTimeout("atime()",1000);
@@ -247,7 +249,7 @@
 		<div class="main_full">
 			<div class="main_full_line">
 		    	<div class="main_full_line_title_font_left">忘记密码</div>
-		    	<div class="main_full_full_right"><a href="%bind(:5)" class="blue_">&nbsp;&nbsp;&nbsp;返回</a></div>
+		    	<div class="main_full_full_right"><a href="%bind(:6)" class="blue_">&nbsp;&nbsp;&nbsp;返回</a></div>
 		  	</div>
 		  	<div class="main_full_lines_720px"></div>
 
@@ -257,7 +259,7 @@
 					    <div class="main_full_line_left"><span class="reg_title_star"></span>手机：</div>
 					    <div class="main_full_line_right">
 					      <input name="Mobile_User" type="text" class="input_251px" id="Mobile_User" onblur="check_mobile(this.value)"/>
-					      <span id="mobileStyle" class="alert_display_none"><img src="%bind(:4)/alert.png" width="16" height="16" class="alert_img"  />
+					      <span id="mobileStyle" class="alert_display_none"><img src="%bind(:5)/alert.png" width="16" height="16" class="alert_img"  />
 						  <label id="userMobile_status"></label></span>
 					    </div>
 					</div>
@@ -270,7 +272,7 @@
 					    <div class="main_full_line_left"><span class="reg_title_star"></span>验证码：</div>
 					    <div class="main_full_line_right">
 					      <input name="yzm" type="text" class="input_105px" id="yzm"  tabindex='6'/>
-					      <span id="yzmStyle" class="alert_display_none"><img src="%bind(:4)/alert.png" width="16" height="16" class="alert_img"  />
+					      <span id="yzmStyle" class="alert_display_none"><img src="%bind(:5)/alert.png" width="16" height="16" class="alert_img"  />
 						  <label id="yzm_status"></label></span>
 					    </div>
 					</div>
