--- a/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_WJMM_EP_HTML.html
+++ b/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_WJMM_EP_HTML.html
@@ -149,7 +149,7 @@
 		var tel=$("#Mobile_User").val();
 		if(yzm==""){$("#yzm_status").html("<span>请输入验证码</span>");$("#yzmStyle").removeClass("alert_display_none");}
 		else{
-			var tzParams = 	'{"ComID":"TZ_SITE_UTIL_COM","PageID":"TZ_SITE_SMS_STD","OperateType":"QF","comParams":{"phone":"'+tel+'","yzm":"'+yzm+'","orgid":"'+$("#orgid").val()+'","lang":"%bind(:3)","sen":"3"}}';
+			var tzParams = 	'{"ComID":"TZ_SITE_UTIL_COM","PageID":"TZ_SITE_SMS_STD","OperateType":"QF","comParams":{"phone":"'+tel+'","yzm":"'+yzm+'","siteid":"%bind(:7)","orgid":"'+$("#orgid").val()+'","lang":"%bind(:3)","sen":"3"}}';
 			$.ajax({
 				type:"post",
 				dataType:"json",
@@ -162,7 +162,7 @@
 						$("#yzm_status").html("");
 						$("#yzmStyle").addClass("alert_display_none");
 						btime();
-						window.location.href="%bind(:1)"+"?classid=smsCls&orgid="+$("#orgid").val()+"&phone="+tel+"&lang=%bind(:3)&sen=4&yzm="+yzm;
+						window.location.href="%bind(:1)"+"?classid=smsCls&orgid="+$("#orgid").val()+"&siteid=%bind(:7)&phone="+tel+"&lang=%bind(:3)&sen=4&yzm="+yzm;
 					}else{
 						$("#yzm_status").html(result.state.errdesc);
 						$("#yzmStyle").removeClass("alert_display_none");
