--- a/src/main/resources/html/TZWebSiteRegisteBundle/TZ_USER_REG_PREVIEW_HTML.html
+++ b/src/main/resources/html/TZWebSiteRegisteBundle/TZ_USER_REG_PREVIEW_HTML.html
@@ -10,8 +10,10 @@
 		<link href="%bind(:2)/statics/css/website/userRegPreview.css" rel="stylesheet" type="text/css" />
 		<script type="text/javascript" src="%bind(:2)/statics/js/lib/jquery/jquery.min.js"></script>
 		<script type="text/javascript" src="%bind(:2)/statics/js/tranzvision/util/layer.js"></script>
+		<script type="text/javascript" src="%bind(:2)/statics/js/lib/laydate/laydate.js"></script>
 		<script type="text/javascript" src="%bind(:2)/statics/js/tranzvision/extjs/app/view/website/set/js/pagefunc.js"></script>
 		<link rel="stylesheet" href="%bind(:2)/statics/css/website/chosen.css">
+		<script src="%bind(:2)/statics/js/lib/jquery/chosen.jquery.js" type="text/javascript"></script>
 		<script type="text/javascript" src="%bind(:2)/statics/js/tranzvision/util/checkExplorer.js" charset="utf-8"></script>
 
 
