在线申请修改 20161202 唐敏敏

--- a/src/main/resources/html/TZApplicationCenterBundle/TZ_GD_CLASS_SELECT_HTML.html
+++ b/src/main/resources/html/TZApplicationCenterBundle/TZ_GD_CLASS_SELECT_HTML.html
@@ -71,7 +71,7 @@
 
 </head>
 <body style="background:#fff">
-	
+
 <div id="headarea" class="top assdiv" area-add="false" area-edit="true" area-del="false" area-copy="false" area-moveup="false" area-movedown="false" area-postion="H" area-type="YT" area-id="">
 		
 <!---  网站标题头 begin--->
@@ -154,5 +154,7 @@
 	
 	});
 </script>
+
+<input type="hidden" id="siteid" name="siteid" value="%bind(:6)"/>	
 </body>
 </html>
