登录注册维护和个人信息完善修改

--- a/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_PERFECT_HTML.html
+++ b/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_PERFECT_HTML.html
@@ -40,7 +40,7 @@
 
 
 			 
-			<!--<div class="main_full_line" id="button_yzfs" %bind(:8)>
+			<div class="main_full_line" id="button_yzfs" %bind(:8)>
 				<div class="main_full_line_right">
 	    			<input id="send_Verification" type="button" value="发送手机验证码" class="button_351px" onclick="send_yzm()"/>
 				</div>
@@ -70,7 +70,7 @@
 				  		<label id="yzm_Emailstatus"></label>
 					</span>
 			     </div>
-			</div> -->
+			</div>
 	  	<div class="main_full_line">
 				<div class="bt_register" id="submitbutton"><span style="color:#FFFFFF">补充个人信息</span></div>
 </div>
