浏览器兼容性检查，以及layer升级

--- a/src/main/resources/html/TZSitePageBundle/TzScriptsLoginRelease.html
+++ b/src/main/resources/html/TZSitePageBundle/TzScriptsLoginRelease.html
@@ -10,3 +10,7 @@
 	src="%bind(:1)/statics/js/website/commonfunc.js"></script>
 <script type="text/javascript"
 	src="%bind(:1)/statics/js/website/login/initp.js"></script>
+<script type="text/javascript"
+	src="%bind(:1)/statics/js/tranzvision/util/layer.js"></script>		
+<script type="text/javascript"
+	src="%bind(:1)/statics/js/tranzvision/util/checkExplorer.js"></script>	
